--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       server-addr: localhost:8848 # nacos 服务地址
       discovery:
         cluster-name: HZ # 集群名称
+        namespace: 31701f76-6e3d-468f-bfee-083f338071d9 # 命名空间ID
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
