--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -10,10 +10,11 @@ spring:
     name: orderservice
   cloud:
     nacos:
-      server-addr: localhost:8848 # nacos 服务地址
+      server-addr: localhost:8848,localhost:8047,localhost:8049 # nacos 服务地址
       discovery:
-        cluster-name: HZ # 集群名称
+#        cluster-name: HZ # 集群名称
         namespace: 31701f76-6e3d-468f-bfee-083f338071d9 # 命名空间ID
+        ephemeral: false # 是否是临时实例
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
