--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
-  application:
-    name: userservice
-  cloud:
-    nacos:
-      server-addr: localhost:8848 # nacos 服务地址
-      discovery:
-        cluster-name: HZ # 集群名称
+#  application:
+#    name: userservice
+#  cloud:
+#    nacos:
+#      server-addr: localhost:8848 # nacos 服务地址
+#      discovery:
+#        cluster-name: HZ # 集群名称
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
@@ -21,7 +21,7 @@ logging:
   level:
     cn.itcast: debug
   pattern:
-    dateformat: MM-dd HH:mm:ss:SSS
+    dateformat: yyyy-MM-dd HH:mm:ss:SSS
 #eureka:
 #  client:
 #    service-url:
