--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -36,4 +36,8 @@ ribbon:
     clients: # 指定饥饿加载的服务名称
       - userservice # 需要配置多个服务器名称时可使用该方法
     enabled: true # 开启饥饿加载
-
+feign:
+  client:
+    config:
+      default:
+        loggerLevel: FULL
