--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -36,8 +36,16 @@ ribbon:
     clients: # 指定饥饿加载的服务名称
       - userservice # 需要配置多个服务器名称时可使用该方法
     enabled: true # 开启饥饿加载
+#开启feign日志
+#feign:
+#  client:
+#    config:
+#      default:
+#        loggerLevel: FULL
+
 feign:
-  client:
-    config:
-      default:
-        loggerLevel: FULL
+  httpclient:
+    enabled: true # 支持HttpClient的开关
+    max-connections: 200 # 最大连接数
+    max-connections-per-route: 50 # 单个路径的最大连接数
+
