设置跨域问题

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -22,3 +22,19 @@ spring:
             - Before=2031-04-13T15:14:47.433+08:00[Asia/Shanghai] # 时间在这个时间之前才符合条件
       default-filters: # 全局过滤器
         - AddRequestHeader=Truth,Itcast is freaking aowsome!
+      globalcors: # 全局的跨域处理
+        add-to-simple-url-handler-mapping: true # 解决options请求被拦截问题
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: # 让那些网站的跨域请求
+              - "http://localhost:8090"
+              - "http://www.leyou.com"
+            allowedMethods: # 可跨域Ajax的请求方式
+              - "GET"
+              - "POST"
+              - "DELETE"
+              - "PUT"
+              - "OPTIONS"
+            allowedHeaders: "*" # 可在请求中携带的头信息
+            allowCredentials: true # 是否可携带cookie
+            maxAge: 360000 # 这次跨域检测的有效期
